recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: value and is not a member of Boolean
  if (steps!=0 and angle ==int ) {
               ^Tree:3: error: not found: value int
  if (steps!=0 and angle ==int ) {
                           ^Tree:9: error: value and is not a member of Boolean
  else if (steps==0 and angle ==int)
                    ^Tree:9: error: not found: value int
  else if (steps==0 and angle ==int)
                                ^Tree:12: error: missing arguments for method tree in class Tree;
follow this method with `_' if you want to treat it as a partially applied function
    return tree }
           ^Tree:12: error: missing arguments for method tree in class Tree;
follow this method with `_' if you want to treat it as a partially applied function
    return tree }
           ^Tree:12: warning: enclosing method tree has result type Unit: return value discarded
    return tree }
    ^